<resources>
    <string name="app_name">MvRxWanAndroid</string>
    <string name="navigation_view_header_title">WanAndroid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Home fragment</string>
    <string name="home">首页</string>
    <string name="knowledge_system">知识体系</string>
    <string name="wechat">公众号</string>
    <string name="explore">导航</string>
    <string name="project">项目</string>
    <string name="top_tip">置顶</string>
    <string name="new_fresh">新</string>
</resources>
